# PureDoc

./: LICENSE  README-CN.md  README.md  app.py  build.py  bullet_process.lua  main.py  pyproject.toml  requirements.txt
.github/workflows/: uild_dmg.yml
assets/scripts/: bullet_process.lua
assets/template/: template.docx
docs/zh-CN/: README-CN.md
src/: __init__.py
src/core/: __init__.py  converter.py  pure_converter.py
src/ui/: __init__.py  main_page.py  theme.py  toolbar.py
src/utils/: __init__.py  file_picker.py  get_path.py  platform.py
